[package]
name = "massayo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3", features = ["fileapi", "handleapi", "impl-default", "memoryapi", "psapi"]}
ntapi = {version = "0.3.7", features = ["beta"]}
widestring = "1.0.2"
obfstr = "0.4.1"